--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  10.0.0.219;
+    server_name  10.0.0.219 localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
