--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,6 @@ services:
     image: docker.io/nginx:latest
     volumes:
       - ./home:/usr/share/nginx/html:z
-      - ./conf.d:/etc/nginx/conf.d
+      - ./conf.d:/etc/nginx/conf.d:z
     ports:
       - 5000:80
