--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,6 @@ services:
     volumes:
       - ./home:/usr/share/nginx/html:z
       - ./conf.d:/etc/nginx/conf.d:z
+      - ./images:/data/images:z
     ports:
       - 5000:80
