--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -7,10 +7,10 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html;
     }
 
-    location /images/ {
+    location ~ ^/(images|fonts)/ {
         root /data;
     }
 
