--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -7,8 +7,10 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
+
 
     #error_page  404              /404.html;
 
